[workspace]
members = [
    "common/num-variants",
    "common/short-hex-str",
    "common/cell",
    "crypto/crypto",
    "crypto/crypto-derive",
    "language/borrow-graph",
    "language/bytecode-verifier",
    "language/move-core/types",
    "language/move-lang",
    "language/vm",
    "language/move-vm/runtime",
    "language/move-vm/natives",
    "language/move-vm/types",
    "language/move-vm/test-utils",
    "mvm",
    "bcs",
    "mirai-annotations",
    "common/nibble",
    "common/proptest-helpers",
]
