[workspace]
members = [
    "common/short-hex-str",
    "common/cell",
    "crypto/crypto",
    "crypto/crypto-derive",
    "language/borrow-graph",
    "language/bytecode-verifier",
    "language/bytecode-verifier/invalid-mutations",
    "language/bytecode-verifier/bytecode-verifier-tests",
    "language/move-core/types",
    "language/move-stdlib",
    "language/move-binary-format",
    "language/move-binary-format/serializer-tests",
    "language/move-vm/runtime",
    "language/move-vm/types",
    "language/move-vm/test-utils",
    "mvm",
    "bcs",
    "mirai-annotations",
    "common/nibble",
    "common/proptest-helpers",
    "common/fallible",
    "stdlib",
    "types"
]
