[package]
name = "dvm"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
anyhow = { version = "1.0.34", default-features = false }
hex = { version = "0.4.2", default-features = false }

move-vm-runtime = { path = "../language/move-vm/runtime" }
move-vm-types = { path = "../language/move-vm/types" }
move-core-types = { path = "../language/move-core/types" }
vm = { path = "../language/vm" }
