[package]
name = "dvm"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = { version = "2.0.0", default-features = false } # ok
sp-io = { version = "2.0.0", default-features = false } # ok
anyhow = { version = "1.0.34", default-features = false } # ok
hex = { version = "0.4.2", default-features = false } # ok

move-vm-runtime = { path = "../language/move-vm/runtime", default-features = false }
move-vm-types = { path = "../language/move-vm/types", default-features = false }
move-core-types = { path = "../language/move-core/types", default-features = false }
vm = { path = "../language/vm", default-features = false }

[features]
default = ["std"]
std = [
	"anyhow/std",
	"sp-std/std",
	"sp-io/std",
	"vm/std",
	"move-core-types/std",
	"move-vm-types/std",
	"move-vm-runtime/std",
]
