[package]
name = "mvm"
version = "0.1.0"
authors = [
    "Alex Koz. <alexanderkozlovskii@wings.ai>",
    "Dm. Yakushev <dmitryyakushev@wings.ai>",
]
edition = "2018"

[dependencies]
hashbrown = "0.9"
anyhow = { version = "1.0.34", default-features = false }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }
parity-scale-codec = { version = "2", default-features = false }
parity-scale-codec-derive = { version = "2", default-features = false }
cell = { path = "../common/cell", default-features = false  }
move-vm-runtime = { path = "../language/move-vm/runtime", default-features = false }
move-vm-types = { path = "../language/move-vm/types", default-features = false }
move-core-types = { path = "../language/move-core/types", default-features = false }
vm = { path = "../language/vm", default-features = false }
diem-crypto = { path = "../crypto/crypto", default-features = false }
move-lang = { path = "../language/move-lang", default-features = false }
bcs = { path = "../bcs", default-features = false }
stdlib = { path = "../stdlib", default-features = false, optional = true }
log = { version = "0.4.14", default-features = false }
diem-types = { path = "../types", default-features = false }

[features]
default = ["std", "assets", "move_stdlib"]
assets = []
move_stdlib = [
    "stdlib"
]
std = [
    "anyhow/std",
    "vm/std",
    "move-core-types/std",
    "move-vm-types/std",
    "move-vm-runtime/std",
    "parity-scale-codec/std",
    "move-lang/std",
    "log/std",
    "cell/std"
]
debug_module = ["move-vm-runtime/debug_module"]

