[package]
name = "diem-types"
version = "0.0.1"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem types"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2018"

[dependencies]
anyhow = { version = "1.0.34", default-features = false }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }
cell = { path = "../common/cell", default-features = false }
hashbrown = "0.9"
bcs = { path = "../bcs", default-features = false  }
diem-crypto = { path = "../crypto/crypto", version = "0.0.1", default-features = false  }
diem-crypto-derive = { path = "../crypto/crypto-derive", version = "0.0.1", default-features = false  }
move-core-types = { path = "../language/move-core/types", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0.61", package = "alt_serde_json" }
