[package]
name = "libra-logger"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra libra-logger"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

# Do NOT add any inter-project dependencies.
# This is to avoid ever having a circular dependency with the libra-logger crate.
[dependencies]
erased-serde = { version = "0.3.12", default-features = false, features = ["alloc"] }
libra-log-derive = { path = "derive", version = "0.1.0" }
once_cell = { version = "1.4.1", default-features = false }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.59", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
