[package]
name = "diem-nibble"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem diem-nibble"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
proptest = { version = "1.0.0", optional = true }
serde = { version = "1.0.117", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }

[features]
default = ["std"]
fuzzing = ["proptest"]

std = [
]