[package]
name = "num-variants"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
edition = "2018"
publish = false
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.53"
quote = "1.0.7"
proc-macro2 = "1.0.24"
sp-std = { version = "2.0.0", default-features = false }
