[package]
name = "short-hex-str"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra implementation for retries of operations"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
mirai-annotations = { path = "../../mirai-annotations" }
sp-std = { version = "2.0.0", default-features = false }

[dev-dependencies]
proptest = "0.10"
hex = "0.4.2"

[features]
default = ["std"]
std = [
	"sp-std/std",
]
