[package]
name = "short-hex-str"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra implementation for retries of operations"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
mirai-annotations = { path = "../../mirai-annotations" }
serde = { version = "1.0.117", default-features = false, package = "alt_serde", features = ["derive"] }

[dev-dependencies]
proptest = "0.10"
hex = "0.4.2"

[features]
default = ["std"]
std = [
	"serde/std",
]
