[package]
name = "libra-crypto"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra libra-crypto"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sp-std = { version = "2.0.0", default-features = false } # ok
anyhow = { version = "1.0.34", default-features = false } # ok
bytes = { version = "0.5.6", default-features = false }
serde = { version = "1", default-features = false, package = "alt_serde", features = ["derive"] } # ok
curve25519-dalek = { git = "https://github.com/novifinancial/curve25519-dalek.git", branch = "fiat3", version = "3", default-features = false, features = ["fiat_u64_backend"], optional = true }
ed25519-dalek = { git = "https://github.com/novifinancial/ed25519-dalek.git", branch = "fiat5", version = "1.0.1", default-features = false, features = ["fiat_u64_backend", "serde"], optional = true }
hex = { version = "0.4.2", default-features = false } # ok
once_cell = { version = "1.5.2", default-features = false, features = ["unstable", "alloc"] } # ok
mirai-annotations = { path = "../../mirai-annotations" }
short-hex-str = { path = "../../common/short-hex-str", version = "0.1.0", default-features = false } # ok
static_assertions = "1.1.0" # ok
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
libra-crypto-derive = { path = "../crypto-derive", version = "0.1.0", default-features = false } # ok
lcs = { path = "../../lcs", package = "libra-canonical-serialization", default-features = false } # ok

[features]
default = ["std", "fiat"]
fiat = ["curve25519-dalek", "ed25519-dalek"]

std = [
	"anyhow/std",
	"once_cell/std",
	"sp-std/std",
	# "sp-io/std",
	"lcs/std",
	# "vm/std",
	# "move-core-types/std",
	# "move-vm-types/std",
	# "move-vm-runtime/std",
	"libra-crypto-derive/std",
	"short-hex-str/std",
]

