[package]
name = "libra-crypto"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra libra-crypto"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sp-std = { version = "2.0.0", default-features = false }
anyhow = { version = "1.0.34", default-features = false }
bytes = { version = "0.5.6", default-features = false }
serde = { version = "1", default-features = false, package = "alt_serde", features = ["derive"] }
hex = { version = "0.4.2", default-features = false }
once_cell = { version = "1.5.2", default-features = false, features = ["unstable", "alloc"] }
mirai-annotations = { path = "../../mirai-annotations" }
short-hex-str = { path = "../../common/short-hex-str", version = "0.1.0", default-features = false }
static_assertions = "1.1.0"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
libra-crypto-derive = { path = "../crypto-derive", version = "0.1.0", default-features = false }
lcs = { path = "../../lcs", package = "libra-canonical-serialization", default-features = false }

[features]
default = ["std"]

std = [
	"anyhow/std",
	"once_cell/std",
	"sp-std/std",
	"lcs/std",
	"libra-crypto-derive/std",
	"short-hex-str/std",
]

