[package]
name = "borrow-graph"
version = "0.0.1"
authors = ["Libra Association <opensource@libra.org>"]
publish = false
edition = "2018"
license = "Apache-2.0"

[dependencies]
sp-std = { version = "2.0.0", default-features = false }
mirai-annotations = { path = "../../mirai-annotations" }

[features]
default = ["std"]
std = [
	"sp-std/std",
]
