[package]
name = "bytecode-verifier"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra bytecode verifier"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sp-std = { version = "2.0.0", default-features = false }
hashbrown = "0.9"
anyhow = {version ="1.0.34", default-features = false}
mirai-annotations = "1.10.1"
petgraph = "0.5.1"

borrow-graph = { path = "../borrow-graph", version = "0.0.1" }
vm = { path = "../vm", version = "0.1.0" }
move-core-types = { path = "../move-core/types", version = "0.1.0" }

[features]
default = ["std"]
std = [
	"sp-std/std",
	# "libra-crypto/std",
	"move-core-types/std",
	# "move-vm-types/std",
	"borrow-graph/std",
	"vm/std",
]
