[package]
name = "bytecode-verifier"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra bytecode verifier"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sp-std = { version = "2.0.0", default-features = false }
hashbrown = "0.9"
anyhow = {version ="1.0.34", default-features = false}
mirai-annotations = { path = "../../mirai-annotations", default-features = false }
petgraph = { git = "https://github.com/dfinance/petgraph.git", default-features = false, features = ["graphmap", "stable_graph", "matrix_graph"]}
borrow-graph = { path = "../borrow-graph", default-features = false }
vm = { path = "../vm", version = "0.1.0", default-features = false }
move-core-types = { path = "../move-core/types", default-features = false }

[features]
default = ["std"]
std = [
	"anyhow/std",
	"sp-std/std",
	"move-core-types/std",
	"borrow-graph/std",
	"vm/std",
]
