[package]
name = "move-binary-format"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Move Binary Format"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
hashbrown = "0.9"
anyhow = { version = "1.0.38", default-features = false }
cell = { path = "../../common/cell", default-features = false }
mirai-annotations = { path = "../../mirai-annotations", default-features = false }
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
ref-cast = "1.0.6"
variant_count = "1.1.0"
parking_lot = { version = "0.11.2", default-features = false }
move-core-types = { path = "../move-core/types", default-features = false }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
diem-proptest-helpers = { path = "../../common/proptest-helpers", version = "0.1.0" }
move-core-types = { path = "../move-core/types", features = ["fuzzing"] }
serde_json = { version = "1.0.61", package = "alt_serde_json", default-features = false }

[features]
default = ["std"]
fuzzing = ["proptest", "proptest-derive", "move-core-types/fuzzing"]
std = [
    "anyhow/std",
    "move-core-types/std",
    "cell/std",
]

