[package]
name = "move-lang"
version = "0.0.1"
authors = ["Diem Association <opensource@diem.com>"]
publish = false
edition = "2018"
license = "Apache-2.0"

[dependencies]
hashbrown = "0.9"
serde = { version = "1", default-features = false, package = "alt_serde", features = ["derive"] }
petgraph = { git = "https://github.com/dfinance/petgraph.git", default-features = false, features = ["graphmap", "stable_graph", "matrix_graph"]}
hex = { version = "0.4.2", default-features = false }

[features]
default = ["std"]

std = [
    "hex/std"
]