[package]
name = "vm"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra vm"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sp-std = { version = "2.0.0", default-features = false } # ok
hashbrown = "0.9" # ok

anyhow = { version = "1.0.34", default-features = false } # ok
once_cell = { version = "1.4.1", default-features = false } # ok
mirai-annotations = {path = "../../mirai-annotations" }
ref-cast = "1.0.3" # ok
libra-crypto = { path = "../../crypto/crypto", version = "0.1.0" }
move-core-types = { path = "../move-core/types", version = "0.1.0" }
num-variants = { path = "../../common/num-variants", version = "0.1.0" } # ok

[dev-dependencies]
proptest-derive = "0.2.0"
serde_json = "1.0.59"

[dev-dependencies.proptest]
version = "0.10.1"
features = [
	"alloc", "fork", "timeout", "bit-set",
	# "break-dead-code"
]


[features]
default = ["std"]

std = [
	"anyhow/std",
	"sp-std/std",
	# "sp-io/std",
	# "vm/std",
	"move-core-types/std",
	# "move-vm-types/std",
	# "move-vm-runtime/std",
	# "move-vm-natives/std",
	# "bytecode-verifier/std",
	"libra-crypto/std",
	# "libra-crypto-derive/std",
	# "short-hex-str/std",
	"num-variants/std",
]

