[package]
name = "vm"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra vm"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sp-std = { version = "2.0.0", default-features = false }
hashbrown = "0.9"
anyhow = { version = "1.0.34", default-features = false }
once_cell = { version = "1.5.2", default-features = false, features = ["unstable", "alloc"] }
mirai-annotations = { path = "../../mirai-annotations", default-features = false }
ref-cast = "1.0.3"
libra-crypto = { path = "../../crypto/crypto", version = "0.1.0", default-features = false, features = ["fiat"] }
move-core-types = { path = "../move-core/types", version = "0.1.0", default-features = false }
num-variants = { path = "../../common/num-variants", version = "0.1.0", default-features = false }

[features]
default = ["std"]

std = [
    "anyhow/std",
    "sp-std/std",
    "move-core-types/std",
    "libra-crypto/std",
    "num-variants/std",
]

