[package]
name = "vm"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem vm"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
hashbrown = "0.9"
anyhow = { version = "1.0.34", default-features = false }
cell = { path = "../../common/cell", default-features = false}
mirai-annotations = { path = "../../mirai-annotations", default-features = false }
ref-cast = "1.0.3"
diem-crypto = { path = "../../crypto/crypto", default-features = false }
move-core-types = { path = "../move-core/types", default-features = false }
num-variants = { path = "../../common/num-variants", default-features = false }
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
diem-proptest-helpers = { path = "../../common/proptest-helpers", version = "0.1.0", optional = true }
serde = { version = "1.0.117", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
diem-proptest-helpers = { path = "../../common/proptest-helpers", version = "0.1.0" }
move-core-types = { path = "../move-core/types", version = "0.1.0", features = ["fuzzing"] }
serde_json = { version = "1.0.61", package = "alt_serde_json" }

[features]
default = ["std"]
fuzzing = ["proptest", "proptest-derive", "diem-proptest-helpers", "move-core-types/fuzzing"]
std = [
    "anyhow/std",
    "move-core-types/std",
    "diem-crypto/std",
    "num-variants/std",
    "cell/std",
]

