[package]
name = "move-core-types"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Core types for Move"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sp-std = { version = "2.0.0", default-features = false }
anyhow = { version = "1.0.34", default-features = false }
hex = { version = "0.4.2", default-features = false }
mirai-annotations = { path = "../../../mirai-annotations", default-features = false  }
ref-cast = "1.0.3"
serde = { version = "1", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }
static_assertions = "1.1.0"
once_cell = { version = "1.5.2", default-features = false, features = ["unstable", "alloc"] }
lcs = { path = "../../../lcs", package = "libra-canonical-serialization", default-features = false }
libra-crypto = { path = "../../../crypto/crypto", default-features = false }
libra-crypto-derive = { path = "../../../crypto/crypto-derive", default-features = false }
short-hex-str = { path = "../../../common/short-hex-str", default-features = false }


[features]
default = ["std"]
std = [
	"anyhow/std",
	"sp-std/std",
	"lcs/std",
	"libra-crypto/std",
	"libra-crypto-derive/std",
	"short-hex-str/std",
]
