[package]
name = "move-core-types"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core types for Move"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
enum-iterator = "0.6.0"
anyhow = { version = "1.0.34", default-features = false }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
mirai-annotations = { path = "../../../mirai-annotations", default-features = false }
ref-cast = "1.0.3"
serde = { version = "1", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }
static_assertions = "1.1.0"
bcs = { path = "../../../bcs", default-features = false }
diem-crypto = { path = "../../../crypto/crypto", default-features = false }
diem-crypto-derive = { path = "../../../crypto/crypto-derive", default-features = false }
short-hex-str = { path = "../../../common/short-hex-str", default-features = false }
parity-scale-codec = { version = "2", default-features = false }
parity-scale-codec-derive = { version = "2", default-features = false }
rand = { version = "0.7.3", default-features = false, optional = true }
rand_core = { version = "0.5.1", default-features = false, optional = true }
proptest = { version = "1.0.0", default-features = false, optional = true }
proptest-derive = { version = "0.3.0", default-features = false, optional = true }
cell = { path = "../../../common/cell", default-features = false }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.4.2"
serde_json = { version = "1.0.61", package = "alt_serde_json" }

[features]
default = ["std"]
fuzzing = ["proptest", "proptest-derive"]
std = [
    "anyhow/std",
    "bcs/std",
    "diem-crypto/std",
    "diem-crypto-derive/std",
    "short-hex-str/std",
    "parity-scale-codec/std",
    "rand_core/std",
    "rand/std"
]
