[package]
name = "move-core-types"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core types for Move"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = { version = "1.0.34", default-features = false }
bcs = { path = "../../../bcs", default-features = false }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
mirai-annotations = { path = "../../../mirai-annotations", default-features = false }
cell = { path = "../../../common/cell", default-features = false }
proptest = { version = "1.0.0", default-features = false, optional = true }
proptest-derive = { version = "0.3.0", default-features = false, optional = true }
rand = { version = "0.7.3", default-features = false, optional = true }
ref-cast = "1.0.3"
serde = { version = "1", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }
enum-iterator = "0.6.0"
parity-scale-codec = { version = "3", default-features = false }
parity-scale-codec-derive = { version = "3", default-features = false }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.4.2"
serde_json = { version = "1.0.61", package = "alt_serde_json" }

[features]
default = ["std"]
fuzzing = ["proptest", "proptest-derive"]
std = [
    "anyhow/std",
    "bcs/std",
    "parity-scale-codec/std",
    "rand/std"
]
