[package]
name = "move-vm-natives"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Move VM native functions"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sp-std = { version = "2.0.0", default-features = false }
once_cell = { version = "1.4.1", default-features = false }
mirai-annotations = { path = "../../../mirai-annotations", default-features = false }
sha2 = { version = "0.9.2", default-features = false }

libra-crypto = { path = "../../../crypto/crypto", default-features = false }
move-core-types = { path = "../../move-core/types", default-features = false }
move-vm-types = { path = "../types", default-features = false }
vm = { path = "../../vm", default-features = false }

[features]
default = ["std"]
debug_module = []
std = [
    "once_cell/std",
    "sha2/std",
    "sp-std/std",
    "libra-crypto/std",
    "move-core-types/std",
    "move-vm-types/std",
    "vm/std",
]
