[package]
name = "move-vm-runtime"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Core Move execution logic"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = { version = "2.0.0", default-features = false } # ok
hashbrown = "0.9" # ok
fail = "0.4.0" # ?
mirai-annotations = "1.10.1" # need replacement, depends on std
once_cell = { version = "1.4.1", default-features = false } # ok
hex = { version = "0.4.2", default-features = false } # ok
anyhow = { version = "1.0.34", default-features = false } # ok

bytecode-verifier = { path = "../../bytecode-verifier", version = "0.1.0" }
libra-crypto = { path = "../../../crypto/crypto", version = "0.1.0" }
move-core-types = { path = "../../move-core/types", version = "0.1.0" }
move-vm-natives = { path = "../natives", version = "0.1.0" }
move-vm-types = { path = "../types", version = "0.1.0" }
vm = { path = "../../vm", version = "0.1.0" }

[dev-dependencies]

[dev-dependencies.proptest]
version = "0.10.1"
features = [
	"alloc", "fork", "timeout", "bit-set",
	# "break-dead-code"
]

[features]
default = ["std"]
debug_module = ["move-vm-natives/debug_module"]
failpoints = ["fail/failpoints"]

std = [
	"sp-std/std",
	# "sp-io/std",
	"vm/std",
	"move-core-types/std",
	"move-vm-types/std",
	# "move-vm-runtime/std",
	"move-vm-natives/std",
	"bytecode-verifier/std",
	"libra-crypto/std",
	# "libra-crypto-derive/std",
	# "short-hex-str/std",
]
